# cw-workshop

./: Cargo.toml  instantiate.json  query_args.json  reset_args.json
artifacts/: checksums.txt  cw_workshop.wasm
src/: contract.rs  error.rs  lib.rs  msg.rs  msgs.rs
