[package]
name = "cw-workshop"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { version = "1.5.3", features = ["staking"] }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = "1.0.58"
nibiru-std = "0.0.3"
cw-ownable = "0.5.1"
cosmwasm-schema = "2.0.2"
cw-storage-plus = "0.16.0"
